It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sat, Dec 19, 2009
---------------------------------------------------------------------
- Fixed deprecation warning when adding a new comment.
- Fixed Apache/Passenger issue of not being able to load tab settings.

Mon, Dec 14, 2009
---------------------------------------------------------------------
- Make sure no activity records are left behind when model record gets deleted from the database.

Sun, Dec 13, 2009
---------------------------------------------------------------------
- Fixed broken sidebar search in Admin/Users.
- Refactored sidebar rendering to explicitly check if template file exists.

Sat, Dec 12, 2009
---------------------------------------------------------------------
- Upgraded [simple_column_search] plugin that adds search support for Postgres.
- More I18n tweaks in views.
- Metallica show at HP Pavilion in San Jose!

Sun, Nov 29, 2009
---------------------------------------------------------------------
- Added optional PLUGIN=plugin parameter to "rake crm:settings:load" task.
- Sorted locale keys, synced up English, Portuguese, and Russian locale files.

Tue, Nov 24, 2009
---------------------------------------------------------------------
- Happy birthday, Fat Free CRM is one year old!

Wed, Nov 18, 2009
---------------------------------------------------------------------
- Added Thai language translation (thanks, Apirak!)

Mon, Nov 16, 2009
---------------------------------------------------------------------
- Streamlined CSS styles to fix text wrapping.
- Added explicit CSS value to fix tabs height (thanks, Apirak!)
- Fixed time calculations for dashboard activities.

Thu, Nov 12, 2009
---------------------------------------------------------------------
- Restructured settings to take advantage of locale.
- NOTE: re-run crm:settings:load
