@@ -1,0 +1,29 @@
+- content_for(:tabless) do
+  500 error
+
+!!!
+%html{ :xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => :en,  :lang => :en }
+  %head
+    %meta{ "http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
+    %title Fat Free CRM Exception
+    = stylesheet_link_tag "screen", "facebox.css", :cache => "cache/all"
+    = javascript_include_tag :defaults, "facebox.js", :cache => "cache/all"
+
+  %body
+    #header
+      #welcome
+      %h3= link_to("Fat Free CRM", root_path)
+    %center
+      %p.flash_exception#msg= exception.to_s
+
+  %script
+    :plain
+      document.observe("dom:loaded", function() {
+        new Effect.Move("msg", { x:0, y:-50, mode:"relative", fps:100, duration:0.15, afterFinishInternal: function(effect) {
+          new Effect.Move("msg", { x:0, y:50, mode:"relative", fps:100, duration:0.15, afterFinishInternal: function(effect) {
+            new Effect.Move("msg", { x:0, y:-25, mode:"relative", fps:100, duration:0.15, afterFinishInternal: function(effect) {
+              new Effect.Move("msg", { x:0, y:25, mode:"relative", fps:100, duration:0.15 });
+            }});
+          }});
+        }});
+      });
