@@ -34,6 +34,13 @@ p.flash_notice, p.flash_message {
   color: darkgreen;
   margin: 0px;
   padding: 5px 0px 5px 16px; }
+p.flash_exception {
+  background: #df9;
+  border: 5px limegreen solid;
+  font-size: 14px;
+  margin: 50px auto;
+  padding: 50px;
+  width: 450px; }
 
 div.auto_complete {
   background: white;
